--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "org.apache.cordova.console",
     "com.ionic.keyboard",
     "org.apache.cordova.device",
-    "org.apache.cordova.statusbar"
+    "org.apache.cordova.statusbar",
+    "org.apache.cordova.file-transfer"
   ],
   "cordovaPlatforms": [
     "android",
